Adaption for JDK 9+